yamls/wildfly/deployment_release-name.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from":{
            "kind":"ImageStreamTag",
            "name":"RELEASE-NAME:latest"
          },
          "fieldPath":"spec.template.spec.containers[0].image"
        }
      ]
  labels:
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wildfly
    app.kubernetes.io/version: "26.0"
    helm.sh/chart: wildfly-1.5.4
  name: RELEASE-NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: RELEASE-NAME
      app.kubernetes.io/name: wildfly
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: RELEASE-NAME
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: wildfly
        app.kubernetes.io/version: "26.0"
        helm.sh/chart: wildfly-1.5.4
      name: RELEASE-NAME
    spec:
      containers:
      - env:
        - name: JGROUPS_PING_PROTOCOL
          value: dns.DNS_PING
        - name: OPENSHIFT_DNS_PING_SERVICE_PORT
          value: "8888"
        - name: AUTO_DEPLOY_EXPLODED
          value: "false"
        - name: ENABLE_GENERATE_DEFAULT_DATASOURCE
          value: "false"
        - name: OPENSHIFT_DNS_PING_SERVICE_NAME
          value: RELEASE-NAME-ping
        - name: ENV_FILES
          value: /etc/extensions/*
        image: RELEASE-NAME:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health/live
            port: admin
        name: RELEASE-NAME
        ports:
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8888
          name: ping
          protocol: TCP
        - containerPort: 9990
          name: admin
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health/ready
            port: admin
        startupProbe:
          failureThreshold: 36
          httpGet:
            path: /health/live
            port: admin
          initialDelaySeconds: 5
          periodSeconds: 5
