yamls/wildfly/service_release-name-ping.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The JGroups ping port for clustering.
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wildfly
    app.kubernetes.io/version: "26.0"
    helm.sh/chart: wildfly-1.5.4
  name: RELEASE-NAME-ping
spec:
  clusterIP: None
  ports:
  - name: ping
    port: 8888
    protocol: TCP
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/name: wildfly
  sessionAffinity: None
  type: ClusterIP
