yamls/wildfly/service_release-name.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wildfly
    app.kubernetes.io/version: "26.0"
    helm.sh/chart: wildfly-1.5.4
  name: RELEASE-NAME
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/name: wildfly
  sessionAffinity: None
  type: ClusterIP
