yamls/wildfly/route_release-name.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wildfly
    app.kubernetes.io/version: "26.0"
    helm.sh/chart: wildfly-1.5.4
  name: RELEASE-NAME
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: RELEASE-NAME
    weight: 100
